# LangChainGmailAgent

./: pyproject.toml
gmail_assistant/: agent.py
