[tool.poetry]
name = "gmail-assistant"
version = "0.0.1"
description = ""
authors = ["Hira Afzal <hiraafzal9978@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = {extras = ["llms"], version = "^0.2.5"}
python-dotenv = "^1.0.1"
langchain-openai = "^0.1.8"
google-api-python-client = "^2.133.0"
google-auth-oauthlib = "^1.2.0"
google-auth-httplib2 = "^0.2.0"
beautifulsoup4 = "^4.12.3"
langchain-community = "^0.2.5"
langchainhub = "^0.1.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
